fixed the footer size on smaller media queries and added a paragraph to HTML

--- a/tanja/style.css
+++ b/tanja/style.css
@@ -280,11 +280,12 @@ footer {
     background-color: steelblue;
 }
 
+
 /* iPads */
 @media only screen and (min-width: 768px) and (max-device-width: 1024px) {
 
     header {
-        height: 6vh;
+        height: auto;
     }
 
     nav ul li {
@@ -302,7 +303,6 @@ footer {
     #bc {
         margin-right: 0;
         margin-bottom: 1vh;
-
     }
 }
 
@@ -310,7 +310,7 @@ footer {
 
     header {
         position: static;
-        height: 10vh;
+        height: auto;
     }
 
     h1, h2, h3, p, a, #map {
@@ -398,7 +398,7 @@ footer {
 @media (min-width: 321px) and (max-width: 767px) {
     header {
         position: static;
-        height: 10vh;
+        height: auto;
     }
 
     h1, h2, h3, p, a, #map {
